# rss-watch

./: .travis.yml  Cargo.toml  LICENSE  README.md  init.sql
.github/workflows/: continuous-integration.yaml
migrations/: V1__init.sql
src/: cli.rs  database.rs  error.rs  main.rs  watcher.rs
