[package]
authors = ["Mikkel Kroman <mk@uplink.io>"]
edition = "2018"
name = "rss-watch"
version = "0.1.0"
license = "BSD-2-Clause"
keywords = ["rss", "atom", "monitor", "watch"]
homepage = "https://github.com/mkroman/rss-watch"
repository = "https://github.com/mkroman/rss-watch"
description = "rss-watch is a command-line rss/atom feed watching utillity."

[dependencies]
rss = "2.0"
atom_syndication = { version = "0.12", features = ["with-serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
app_dirs = "1.0"
env_logger = "0.10"
failure = "0.1"
rusqlite = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
humantime = "2.1"

[dependencies.log]
version = "0.4"
features = ["release_max_level_warn"]

[dependencies.clap]
version = "2.32"
features = ["suggestions", "color", "wrap_help"]

[features]
default = ["json"]
json = ["serde_json"]
