[package]
authors = ["Mikkel Kroman <mk@uplink.io>"]
edition = "2018"
name = "rss-watch"
version = "0.1.0"
license = "BSD-2-Clause"
keywords = ["rss", "atom", "monitor", "watch"]
homepage = "https://github.com/mkroman/rss-watch"
repository = "https://github.com/mkroman/rss-watch"
description = "rss-watch is a command-line rss/atom feed watching utillity."

[dependencies]
atom_syndication = { version = "0.12", features = ["with-serde"] }
directories = "5.0.1"
env_logger = "0.10"
humantime = "2.1"
miette = { version = "7.2.0", features = ["fancy"] }
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0"
rusqlite = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0.58"

[dependencies.clap]
version = "2.34"
features = ["suggestions", "color", "wrap_help"]

[dependencies.log]
version = "0.4"
features = ["release_max_level_warn"]

[features]
default = ["json"]
json = ["serde_json"]
