[package]
authors = ["Mikkel Kroman <mk@uplink.io>"]
edition = "2021"
name = "rss-watch"
version = "0.1.0"
license = "BSD-2-Clause"
keywords = ["rss", "atom", "monitor", "watch"]
homepage = "https://github.com/mkroman/rss-watch"
repository = "https://github.com/mkroman/rss-watch"
description = "rss-watch is a command-line rss/atom feed watching utillity."

[dependencies]
atom_syndication = { version = "0.12", features = ["with-serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0.1"
humantime = "2.1"
miette = { version = "7.2.0", features = ["fancy"] }
reqwest = { version = "0.12", features = ["blocking"] }
rss = "2.0"
rusqlite = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0.58"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.0"

[features]
default = ["json"]
json = ["serde_json"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"
